--- a/sites/configurations/goodmoves/partials/organisation/search-result.hbs
+++ b/sites/configurations/goodmoves/partials/organisation/search-result.hbs
@@ -18,7 +18,8 @@
   </div>
   <div class="mdc-card__actions">
     <div class="mdc-card__action-buttons demo-card__action-buttons--text-only mdc-card__actions--full-bleed">
-      <a href="/organisation/{{slug}}" class="mdc-card__action">Find out more</a>
+      <a href="/organisation/{{slug}}{{@root.request.url.search}}" class="mdc-card__action hide-sm">Find out more</a>
+      <a href="/organisation/{{slug}}{{@root.request.url.search}}" class="mdc-card__action hide-md hide-lg"><span class="fal fa-info-circle fa-fw fa-2x" aria-hidden="true"></span></a>
     </div>
   </div>
 </div>
