Mobile layout improvements

--- a/assets/css/goodmoves-styles.scss
+++ b/assets/css/goodmoves-styles.scss
@@ -2098,224 +2098,6 @@ footer,
     }
   }
 }
-@media screen and (max-width: $desktop-landscape-breakpoint) {
-  .home-banner .banner-search.overlay .content {
-    .overlay-content {
-      .header-text {
-        font-size: 4rem;
-        line-height: 4rem;
-      }
-    }
-  }
-}
-@media screen and (min-width: $desktop-landscape-breakpoint + 1) {
-  .home-banner .banner-search.overlay .content {
-    background-image: linear-gradient(60deg, rgba(66, 132, 42, 0.89), rgba(66, 132, 42, 0.91) 42%, transparent 42.08%, transparent);
-  }
-}
-@media screen and (min-width: $mobile-landscape-breakpoint + 1) and (max-width: $desktop-landscape-breakpoint) {
-  .home-banner .banner-search.overlay .content {
-    background-image: linear-gradient(60deg, rgba(66, 132, 42, 0.89), rgba(66, 132, 42, 0.91) 48%, transparent 48.08%, transparent);
-  }
-}
-@media screen and (min-width: $mobile-breakpoint + 1) and (max-width: $mobile-landscape-breakpoint) {
-  .home-banner .banner-search.overlay .content {
-    background-image: linear-gradient(60deg, rgba(66, 132, 42, 0.89), rgba(66, 132, 42, 0.91) 66%, transparent 66.08%, transparent);
-  }
-}
-@media screen and (max-width: $mobile-landscape-breakpoint) {
-  .mdc-card.full,
-  .mdc-card.search-result {
-    .mdc-card__info--vacancy {
-      .fa-ul.first {
-        width: 30vw;
-      }
-      .fa-ul.last {
-        width: 25vw;
-      }
-    }
-  }
-  .home-banner .banner-search.overlay .content {
-    .overlay-content {
-      padding: $unit;
-      .header-text {
-        font-size: 3.5rem;
-        line-height: 3.5rem;
-        padding: 0 0 $unit/2;
-        .normal {
-          letter-spacing: -0.3rem;
-        }
-      }
-    }
-  }
-  .mdc-card .mdc-card__info--organisation, .mdc-card .mdc-card__info--vacancy {
-    padding: 0;
-  }
-  .mdc-card.list,
-  .mdc-card.mini,
-  .mdc-card.gist,
-  .mdc-card.search-result {
-    .search-result-article__snippet,
-    .search-result-article__notes {
-      padding: 0 $unit/2 $unit/2;
-    }
-  }
-  .mdc-card .mdc-card__actions .mdc-card__action-buttons,
-  .panel-heading,
-  .mdc-typography--body1 {
-    font-size: 0.9rem;
-  }
-  .mdc-typography--headline3 {
-    font-size: 1.6rem;
-    line-height: 1.7rem;
-  }
-  .mdc-typography--headline4 {
-    font-size: 1.5rem;
-    line-height: 1.6rem;
-  }
-  .mdc-typography--headline5 {
-    font-size: 1.4rem;
-    line-height: 1.5rem;
-  }
-  .mdc-card.full .mdc-card--full-content h4,
-  .mdc-typography--headline6 {
-    font-size: 1.2rem;
-    line-height: 1.3rem;
-  }
-  .mdc-typography--headline7 {
-    font-size: 1.1rem;
-    line-height: 1.05rem;
-  }
-  .panel-heading {
-    padding: $unit/3 $unit;
-  }
-  hr {
-    margin: $unit*(2/3) 0;
-  }
-  .search-form {
-    .mdc-layout-grid__inner {
-      grid-gap: 0;
-    }
-    .mdc-text-field,
-    .mdc-select--box {
-      margin: $unit/2 0 0;
-    }
-    .mdc-form-field > label {
-      font-size: 0.85rem;
-    }
-  }
-}
-@media screen and (max-width: $mobile-breakpoint) {
-  .mdc-typography--headline3 {
-    font-size: 1.5rem;
-    line-height: 1.6rem;
-  }
-  .mdc-typography--headline4 {
-    font-size: 1.4rem;
-    line-height: 1.5rem;
-  }
-  #vacancy-tab-bar {
-    height: 48px;
-    .mdc-tab {
-      height: 48px;
-      line-height: 48px;
-      .fa-fw {
-        font-size: 2em;
-        font-weight: 300;
-        line-height: 48px;
-      }
-      .label {
-        display: none;
-      }
-    }
-  }
-  .scroll-icon,
-  .search-info .pull-right {
-    display: none;
-  }
-  .scroll-button {
-    width: $unit !important;
-  }
-  .scroll-button.scroll-left {
-    background-image: linear-gradient(to left, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.3)) !important;
-  }
-  .scroll-button.scroll-right {
-    background-image: linear-gradient(to right, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.3)) !important;
-  }
-  header .container-fluid .mdc-top-app-bar__title svg {
-    margin-top: $unit;
-  }
-  .home-banner .banner-search.overlay .content {
-    background-image: none;
-    background-color: rgba(66, 132, 42, 0.89);
-    margin: 0;
-    padding: $unit;
-    .overlay-content {
-      padding: $unit/2 0 $unit*(3/4);
-      .header-text {
-        padding: 0 0 $unit;
-        font-size: 2.8rem;
-        line-height: 2.5rem;
-        letter-spacing: -0.15rem;
-        .normal {
-          letter-spacing: -0.25rem;
-        }
-        .normal.moves {
-          margin-left: -0.2rem;
-        }
-      }
-      .header-extra {
-        max-width: 100%;
-        font-size: 1.1rem;
-        padding: $unit/4 0;
-      }
-    }
-    .search-content {
-      padding: 0;
-    }
-  }
-  .mdc-card.full,
-  .mdc-card.search-result {
-    .mdc-card__info--vacancy {
-      .fa-ul {
-        float: none;
-      }
-      .fa-ul.first,
-      .fa-ul.last {
-        width: auto;
-        margin-left: 1.65rem !important;
-      }
-    }
-  }
-  .mdc-card .mdc-card__info--vacancy-row,
-  .mdc-card .mdc-card__info--organisation-row {
-    display: block;
-    .mdc-card__media {
-      display: block;
-      margin: 1rem auto 0;
-    }
-    .mdc-card__media--organisation::before {
-      margin: 0;
-    }
-  }
-  .mdc-card__action-buttons + .mdc-card__action-icons,
-  .mdc-card .mdc-card__actions .mdc-card__action-buttons {
-    margin-left: 0;
-  }
-  .mdc-card .mdc-card__actions .mdc-card__action {
-    margin-right: $unit/2;
-  }
-  #search-view {
-    padding: $unit;
-    .mdc-text-field,
-    .mdc-select {
-      margin: 0;
-    }
-    #search-jobs {
-      margin-top: $unit*.15;
-    }
-  }
-}
 
 .mdc-list-item {
   height: $header-lower-height;
@@ -2461,6 +2243,108 @@ footer,
   }
 }
 
+.scrolling-grid {
+  display: flex;
+  display: -webkit-flex;
+  flex: 1;
+  -webkit-flex-wrap: nowrap;
+  flex-wrap: nowrap;
+  overflow-x: auto;
+  overflow-y: hidden;
+  -webkit-justify-content: space-between;
+  -webkit-overflow-scrolling: touch;
+  -ms-overflow-style: -ms-autohiding-scrollbar;
+  padding: $unit*1.5 0 $unit;
+  margin: 0 0 $unit/2;
+  .mdc-layout-grid__cell.shortlist-jobs,
+  .mdc-layout-grid__cell.latest-jobs,
+  .mdc-layout-grid__cell.top-jobs {
+    margin: 0 $unit/2;
+  }
+  // .mdc-layout-grid__cell.shortlist-jobs:first-child,
+  // .mdc-layout-grid__cell.latest-jobs:first-child,
+  // .mdc-layout-grid__cell.top-jobs:first-child {
+  //   margin-left: $unit*3;
+  // }
+  .mdc-card.align-centre {
+    box-shadow: none;
+    width: 18vw !important;
+    min-width: 200px;
+  }
+  .mdc-layout-grid__cell {
+    flex: 0 0 auto;
+    @media screen and (min-width: $mobile-landscape-breakpoint + 1) {
+      .mdc-card {
+        width: 30vw;
+      }
+    }
+    @media screen and (min-width: $mobile-breakpoint + 1) and (max-width: $mobile-landscape-breakpoint) {
+      .mdc-card {
+        width: 47vw;
+      }
+    }
+    @media screen and (max-width: $mobile-breakpoint) {
+      .mdc-card {
+        width: 70vw;
+      }
+    }
+  }
+}
+.scroll-button {
+  display: none;
+  align-items: center;
+  align-self: center;
+  justify-content: center;
+  position: absolute;
+  height: 100%;
+  width: $unit*4;
+  border-radius: $unit/4;
+  z-index: 2;
+  // opacity: 0.7;
+  cursor: pointer;
+  .scroll-icon {
+    background-color: $mdc-theme-primary;
+    color: white;
+    font-size: 3rem;
+    height: $unit*3;
+    width: $unit*3;
+    border-radius: 50%;
+  }
+}
+.scroll-button:hover {
+  // opacity: 1;
+  .scroll-icon {
+    background-color: $mdc-theme-primary-dark;
+  }
+}
+.scroll-button.pager {
+  display: flex;
+}
+.scroll-button.scroll-left {
+  left: $unit;
+  background-image: linear-gradient(to left, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0) 60%, rgba(0, 0, 0, 0.1));
+}
+.fa-angle-left:before {
+  width: 1.5rem;
+  display: inline-block;
+  text-align: left;
+}
+.scroll-button.scroll-right {
+  right: $unit;
+  background-image: linear-gradient(to right, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0) 60%, rgba(0, 0, 0, 0.1));
+}
+.fa-angle-right:before {
+  width: 1.5rem;
+  display: inline-block;
+  text-align: right;
+}
+.scroll-button.scroll-left:hover {
+  background-image: linear-gradient(to left, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0) 60%, rgba(0, 0, 0, 0.3));
+}
+.scroll-button.scroll-right:hover {
+  background-image: linear-gradient(to right, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0) 60%, rgba(0, 0, 0, 0.3));
+}
+
 // Footer ======================================================================
 
 footer.mdc-layout__footer {
@@ -2584,6 +2468,262 @@ footer.mdc-layout__footer {
     }
   }
 }
+
+@media screen and (max-width: $desktop-landscape-breakpoint) {
+  .home-banner .banner-search.overlay .content {
+    .overlay-content {
+      .header-text {
+        font-size: 4rem;
+        line-height: 4rem;
+      }
+    }
+  }
+}
+@media screen and (min-width: $desktop-landscape-breakpoint + 1) {
+  .home-banner .banner-search.overlay .content {
+    background-image: linear-gradient(60deg, rgba(66, 132, 42, 0.89), rgba(66, 132, 42, 0.91) 42%, transparent 42.08%, transparent);
+  }
+}
+@media screen and (min-width: $mobile-landscape-breakpoint + 1) and (max-width: $desktop-landscape-breakpoint) {
+  .home-banner .banner-search.overlay .content {
+    background-image: linear-gradient(60deg, rgba(66, 132, 42, 0.89), rgba(66, 132, 42, 0.91) 48%, transparent 48.08%, transparent);
+  }
+}
+@media screen and (min-width: $mobile-breakpoint + 1) and (max-width: $mobile-landscape-breakpoint) {
+  .home-banner .banner-search.overlay .content {
+    background-image: linear-gradient(60deg, rgba(66, 132, 42, 0.89), rgba(66, 132, 42, 0.91) 66%, transparent 66.08%, transparent);
+  }
+}
+@media screen and (max-width: $mobile-landscape-breakpoint) {
+  .mdc-card.full,
+  .mdc-card.search-result {
+    .mdc-card__info--vacancy {
+      .fa-ul.first {
+        width: 30vw;
+      }
+      .fa-ul.last {
+        width: 25vw;
+      }
+    }
+  }
+  .home-banner .banner-search.overlay .content {
+    padding: $unit/2 $unit/2 $unit;
+    .overlay-content {
+      padding: $unit;
+      .header-text {
+        font-size: 3.5rem;
+        line-height: 3.5rem;
+        padding: 0 0 $unit/2;
+        .normal {
+          letter-spacing: -0.3rem;
+        }
+      }
+      .header-extra {
+        max-width: 68%;
+      }
+    }
+    #search-view {
+      padding: $unit/2;
+      .mdc-text-field,
+      .mdc-select {
+        margin: 0;
+      }
+    }
+  }
+  .mdc-card .mdc-card__info--organisation, .mdc-card .mdc-card__info--vacancy {
+    padding: 0;
+  }
+  .mdc-card.list,
+  .mdc-card.mini,
+  .mdc-card.gist,
+  .mdc-card.search-result {
+    .search-result-article__snippet,
+    .search-result-article__notes {
+      padding: 0 $unit/2 $unit/2;
+    }
+  }
+  .mdc-card .mdc-card__actions .mdc-card__action-buttons,
+  .panel-heading,
+  .mdc-typography--body1 {
+    font-size: 0.9rem;
+  }
+  .mdc-typography--headline3 {
+    font-size: 1.6rem;
+    line-height: 1.7rem;
+  }
+  .mdc-typography--headline4 {
+    font-size: 1.5rem;
+    line-height: 1.6rem;
+  }
+  .mdc-typography--headline5 {
+    font-size: 1.4rem;
+    line-height: 1.5rem;
+  }
+  .mdc-card.full .mdc-card--full-content h4,
+  .mdc-typography--headline6 {
+    font-size: 1.2rem;
+    line-height: 1.3rem;
+  }
+  .mdc-typography--headline7 {
+    font-size: 1.1rem;
+    line-height: 1.05rem;
+  }
+  .panel-heading {
+    padding: $unit/3 $unit;
+  }
+  hr {
+    margin: $unit*(2/3) 0;
+  }
+  .mdc-drawer .search-form {
+    .mdc-layout-grid__inner {
+      grid-gap: 0;
+    }
+    .mdc-text-field,
+    .mdc-select--box {
+      margin: $unit/2 0 0;
+    }
+    .mdc-form-field > label {
+      font-size: 0.85rem;
+    }
+  }
+}
+@media screen and (max-width: $mobile-breakpoint) {
+  .mdc-typography--headline3 {
+    font-size: 1.5rem;
+    line-height: 1.6rem;
+  }
+  .mdc-typography--headline4 {
+    font-size: 1.4rem;
+    line-height: 1.5rem;
+  }
+  #vacancy-tab-bar {
+    height: 48px;
+    .mdc-tab {
+      height: 48px;
+      line-height: 48px;
+      .fa-fw {
+        font-size: 2em;
+        font-weight: 300;
+        line-height: 48px;
+      }
+      .label {
+        display: none;
+      }
+    }
+  }
+  .scroll-icon,
+  .search-info .pull-right {
+    display: none;
+  }
+  .scroll-button {
+    width: $unit !important;
+  }
+  .scroll-button.scroll-left {
+    background-image: linear-gradient(to left, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.3)) !important;
+  }
+  .scroll-button.scroll-right {
+    background-image: linear-gradient(to right, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.3)) !important;
+  }
+  header .container-fluid .mdc-top-app-bar__title svg {
+    margin-top: $unit;
+  }
+  .home-banner .banner-search.overlay .content {
+    background-image: none;
+    background-color: rgba(66, 132, 42, 0.89);
+    margin: 0;
+    .overlay-content {
+      padding: $unit/2 0 $unit*(3/4);
+      .header-text {
+        padding: 0 0 $unit;
+        font-size: 2.8rem;
+        line-height: 2.5rem;
+        letter-spacing: -0.15rem;
+        .normal {
+          letter-spacing: -0.25rem;
+        }
+        .normal.moves {
+          margin-left: -0.2rem;
+        }
+      }
+      .header-extra {
+        max-width: 100%;
+        font-size: 1.1rem;
+        padding: $unit/4 0;
+      }
+    }
+    .search-content {
+      padding: 0;
+    }
+  }
+  .home-heading {
+    padding: 0 $unit/2;
+    .mdc-typography--headline5 {
+      margin: $unit/2 0 $unit/5;
+    }
+  }
+  .home-browse .mdc-drawer__content-heading,
+  .home-jobs {
+    padding: 0 !important;
+  }
+  .home-jobs {
+    .mdc-layout-grid {
+      padding: 0 $unit/2;
+    }
+    .scroll-button.scroll-left {
+      left: $unit/2;
+    }
+    .scroll-button.scroll-right {
+      right: $unit/2;
+    }
+  }
+  .home-browse .page-content {
+    padding: 0;
+    .mdc-layout-grid__inner {
+      grid-gap: 0;
+    }
+  }
+  .scrolling-grid {
+    margin: $unit/3 0 $unit/2;
+    padding: $unit/2 0 $unit*(2/3);
+    .mdc-layout-grid__cell.shortlist-jobs,
+    .mdc-layout-grid__cell.latest-jobs,
+    .mdc-layout-grid__cell.top-jobs {
+      margin: 0 $unit 0 $unit/5;
+    }
+  }
+  .mdc-card.full,
+  .mdc-card.search-result {
+    .mdc-card__info--vacancy {
+      .fa-ul {
+        float: none;
+      }
+      .fa-ul.first,
+      .fa-ul.last {
+        width: auto;
+        margin-left: 1.65rem !important;
+      }
+    }
+  }
+  .mdc-card .mdc-card__info--vacancy-row,
+  .mdc-card .mdc-card__info--organisation-row {
+    display: block;
+    .mdc-card__media {
+      display: block;
+      margin: 1rem auto 0;
+    }
+    .mdc-card__media--organisation::before {
+      margin: 0;
+    }
+  }
+  .mdc-card__action-buttons + .mdc-card__action-icons,
+  .mdc-card .mdc-card__actions .mdc-card__action-buttons {
+    margin-left: 0;
+  }
+  .mdc-card .mdc-card__actions .mdc-card__action {
+    margin-right: $unit/2;
+  }
+}
+
 @media screen and (min-width: $mobile-landscape-breakpoint + 1) and (max-width: $desktop-landscape-breakpoint) {
   footer.mdc-layout__footer h3 {
     font-size: $unit*1.1;
@@ -2614,6 +2754,9 @@ footer.mdc-layout__footer {
     .mdc-layout-grid__inner {
       grid-gap: 24px;
     }
+  }
+  a.hide-lg:hover {
+    text-decoration: none;
   }
   footer.mdc-layout__footer h3 {
     font-size: $unit;
@@ -2778,108 +2921,6 @@ footer.mdc-layout__footer {
 
 form.inline-form {
   display: inline-block;
-}
-
-.scrolling-grid {
-  display: flex;
-  display: -webkit-flex;
-  flex: 1;
-  -webkit-flex-wrap: nowrap;
-  flex-wrap: nowrap;
-  overflow-x: auto;
-  overflow-y: hidden;
-  -webkit-justify-content: space-between;
-  -webkit-overflow-scrolling: touch;
-  -ms-overflow-style: -ms-autohiding-scrollbar;
-  padding: $unit*1.5 0 $unit;
-  margin: 0 0 $unit/2;
-  .mdc-layout-grid__cell.shortlist-jobs,
-  .mdc-layout-grid__cell.latest-jobs,
-  .mdc-layout-grid__cell.top-jobs {
-    margin: 0 $unit/2;
-  }
-  // .mdc-layout-grid__cell.shortlist-jobs:first-child,
-  // .mdc-layout-grid__cell.latest-jobs:first-child,
-  // .mdc-layout-grid__cell.top-jobs:first-child {
-  //   margin-left: $unit*3;
-  // }
-  .mdc-card.align-centre {
-    box-shadow: none;
-    width: 18vw !important;
-    min-width: 200px;
-  }
-  .mdc-layout-grid__cell {
-    flex: 0 0 auto;
-    @media screen and (min-width: $mobile-landscape-breakpoint + 1) {
-      .mdc-card {
-        width: 30vw;
-      }
-    }
-    @media screen and (min-width: $mobile-breakpoint + 1) and (max-width: $mobile-landscape-breakpoint) {
-      .mdc-card {
-        width: 47vw;
-      }
-    }
-    @media screen and (max-width: $mobile-breakpoint) {
-      .mdc-card {
-        width: 70vw;
-      }
-    }
-  }
-}
-.scroll-button {
-  display: none;
-  align-items: center;
-  align-self: center;
-  justify-content: center;
-  position: absolute;
-  height: 100%;
-  width: $unit*4;
-  border-radius: $unit/4;
-  z-index: 2;
-  // opacity: 0.7;
-  cursor: pointer;
-  .scroll-icon {
-    background-color: $mdc-theme-primary;
-    color: white;
-    font-size: 3rem;
-    height: $unit*3;
-    width: $unit*3;
-    border-radius: 50%;
-  }
-}
-.scroll-button:hover {
-  // opacity: 1;
-  .scroll-icon {
-    background-color: $mdc-theme-primary-dark;
-  }
-}
-.scroll-button.pager {
-  display: flex;
-}
-.scroll-button.scroll-left {
-  left: $unit;
-  background-image: linear-gradient(to left, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0) 60%, rgba(0, 0, 0, 0.1));
-}
-.fa-angle-left:before {
-  width: 1.5rem;
-  display: inline-block;
-  text-align: left;
-}
-.scroll-button.scroll-right {
-  right: $unit;
-  background-image: linear-gradient(to right, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0) 60%, rgba(0, 0, 0, 0.1));
-}
-.fa-angle-right:before {
-  width: 1.5rem;
-  display: inline-block;
-  text-align: right;
-}
-.scroll-button.scroll-left:hover {
-  background-image: linear-gradient(to left, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0) 60%, rgba(0, 0, 0, 0.3));
-}
-.scroll-button.scroll-right:hover {
-  background-image: linear-gradient(to right, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0) 60%, rgba(0, 0, 0, 0.3));
 }
 
 #app-snackbar {
