--- a/sites/configurations/goodmoves/partials/vacancy/full.hbs
+++ b/sites/configurations/goodmoves/partials/vacancy/full.hbs
@@ -214,6 +214,6 @@
         </div>
       </div>
     </div>
-    {{> vacancy_actions slug=slug Id=Id}}
+    {{> vacancy_actions slug=slug Id=Id action="organisation"}}
   </div>
 </div>
