--- a/assets/css/goodmoves-styles.scss
+++ b/assets/css/goodmoves-styles.scss
@@ -2753,7 +2753,6 @@ footer.mdc-layout__footer {
     .settings,
     .pull-right {
       float: none;
-      margin-bottom: $unit/2;
     }
   }
   .mdc-card.full .mdc-card--full-content .key-info-extra {
@@ -2769,6 +2768,12 @@ footer.mdc-layout__footer {
   }
   a.hide-lg:hover {
     text-decoration: none;
+  }
+  .sign-in-form {
+    padding: $unit/2 0;
+    .x-padding-full {
+      padding: $unit/2;
+    }
   }
   footer.mdc-layout__footer {
     h3 {
