--- a/sites/configurations/goodmoves/templates/account/reset-password.hbs
+++ b/sites/configurations/goodmoves/templates/account/reset-password.hbs
@@ -14,7 +14,7 @@
       <div class="mdc-card__info--vacancy-title mdc-typography--headline4 x-padding">
         Reset password
       </div>
-      <div class="mdc-card__info--vacancy-title mdc-typography--headline5 x-padding">
+      <div class="mdc-card__info--vacancy-title mdc-typography--body2 x-padding">
         Enter your email address to be sent a password reset link
       </div>
     </div>
