--- a/sites/configurations/goodmoves/templates/account/sign-in.hbs
+++ b/sites/configurations/goodmoves/templates/account/sign-in.hbs
@@ -57,6 +57,9 @@
           Sign in
         </button>
         <div class="mdc-typography--body1 v-margin-full">
+          Forgot your password? <a href="/reset-password">Reset password</a>
+        </div>
+        <div class="mdc-typography--body1 v-margin-full">
           Don't have an account? <a href="/sign-up">Sign up</a>
         </div>
         <div class="mdc-typography--body1 v-margin-full">
