--- a/sites/configurations/goodmoves/templates/vacancies/vacancy.hbs
+++ b/sites/configurations/goodmoves/templates/vacancies/vacancy.hbs
@@ -1,11 +1,11 @@
 <div class="container-content">
-  {{#compare data.primaryResponse.hits.total ">" 0}}
+  {{#compare @root.data.primaryResponse.hits.total ">" 0}}
 
   {{> dialog_shortlist}}
 
   <div class="goodmoves-vacancy">
-    {{#each data.primaryResponse.hits.hits ~}}
-{{> vacancy_full _source}}
+    {{#each @root.data.primaryResponse.hits.hits ~}}
+      {{> vacancy_full _source}}
     {{/each ~}}
   </div>
 
@@ -15,7 +15,7 @@
     </div>
     <div class="mdc-layout-grid equal-height">
       <div class="mdc-layout-grid__inner">
-        {{#each data.supplimentaryResponses.related.hits.hits ~}}
+        {{#each @root.data.supplimentaryResponses.related.hits.hits ~}}
         <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-6-desktop mdc-layout-grid__cell--span-8-tablet mdc-layout-grid__cell--span-4-phone">
           {{> vacancy_list _source}}
         </div>
