--- a/sites/configurations/goodmoves/partials/vacancy-search-results.hbs
+++ b/sites/configurations/goodmoves/partials/vacancy-search-results.hbs
@@ -42,7 +42,7 @@
       {{~#unless @last}}, {{/unless~}}
     {{~/each~}}
   {{~/if}}
-  {{~#if location~}} near {{location}} {{/if~}}
+  {{~#if location~}}&nbsp;near {{location}} {{/if~}}
   {{~#if salary_min~}}
     {{~#if salary_max}} between &pound;{{addCommas salary_min}} and &pound;{{addCommas salary_max}}
     {{~else}} over &pound;{{addCommas salary_min}}
