--- a/sites/configurations/goodmoves/templates/account/settings.hbs
+++ b/sites/configurations/goodmoves/templates/account/settings.hbs
@@ -163,16 +163,19 @@
         Deleting your account will:
       </p>
       <ul>
-        <li>Remove all email subscriptions</li>
-        <li>Remove all saved searches</li>
-        <li>Remove all shortlisted vacancies</li>
-        <li>Remove all all notes</li>
-        <li>Remove your account from the Goodmoves system</li>
+        <li>Stop all email alerts</li>
+        <li>Delete your saved searches</li>
+        <li>Delete your shortlist</li>
+        <li>Delete your notes on vacancies</li>
+        <li>Fully remove your account from the Goodmoves system</li>
       </ul>
+      <p>
+        If you only want to stop your email alerts, please see the options on <a href="/searches">searches &amp; email</a>.
+      </p>
     </section>
     <footer class="mdc-dialog__footer">
-      <button type="button" class="mdc-button mdc-dialog__footer__button mdc-dialog__footer__button--cancel">No</button>
-      <a href="/delete-user" class="mdc-button mdc-dialog__footer__button mdc-dialog__footer__button--accept">Yes</a>
+      <button type="button" class="mdc-button mdc-dialog__footer__button mdc-dialog__footer__button--cancel">Cancel</button>
+      <a href="/delete-user" class="mdc-button mdc-dialog__footer__button mdc-dialog__footer__button--accept">Delete account</a>
     </footer>
   </div>
   <div class="mdc-dialog__backdrop"></div>
