--- a/assets/css/goodmoves-styles.scss
+++ b/assets/css/goodmoves-styles.scss
@@ -2905,6 +2905,10 @@ footer.mdc-layout__footer {
 .v-margin-full-bottom {
   margin-bottom: $unit;
 }
+.v-margin-none {
+  margin-top: 0;
+  margin-bottom: 0;
+}
 .h-margin {
   margin-left: $unit/2;
   margin-right: $unit/2;
