--- a/sites/configurations/fundingscotland/layouts/default.hbs
+++ b/sites/configurations/fundingscotland/layouts/default.hbs
@@ -18,7 +18,7 @@
 
 -->
 
-<link rel="shortcut icon" href="https://storage.googleapis.com/scvo-assets/scvo-frontend/assets/images/icons/fundingscotland/favicon.ico">
+<!-- <link rel="shortcut icon" href="https://storage.googleapis.com/scvo-assets/scvo-frontend/assets/images/icons/fundingscotland/favicon.ico">
 <link rel="apple-touch-icon" sizes="57x57" href="https://storage.googleapis.com/scvo-assets/scvo-frontend/assets/images/icons/fundingscotland/apple-icon-57x57.png">
 <link rel="apple-touch-icon" sizes="60x60" href="https://storage.googleapis.com/scvo-assets/scvo-frontend/assets/images/icons/fundingscotland/apple-icon-60x60.png">
 <link rel="apple-touch-icon" sizes="72x72" href="https://storage.googleapis.com/scvo-assets/scvo-frontend/assets/images/icons/fundingscotland/apple-icon-72x72.png">
@@ -35,7 +35,7 @@
 <link rel="manifest" href="https://storage.googleapis.com/scvo-assets/scvo-frontend/assets/images/icons/fundingscotland/manifest.json">
 <meta name="msapplication-TileColor" content="#3c7524">
 <meta name="msapplication-TileImage" content="https://storage.googleapis.com/scvo-assets/scvo-frontend/assets/images/icons/fundingscotland/ms-icon-144x144.png">
-<meta name="theme-color" content="#3c7524">
+<meta name="theme-color" content="#3c7524"> -->
 <link rel="search" type="application/opensearchdescription+xml" title="Funding Scotland" href="/assets/opensearch.xml" />
 
 <link rel="canonical" href="https://fundingscotland.com{{request.params.uri.pathname}}" />
