--- a/sites/configurations/goodmoves/partials/vacancy/description.hbs
+++ b/sites/configurations/goodmoves/partials/vacancy/description.hbs
@@ -1,6 +1,6 @@
 {{#if description ~}}
   <div class="search-result-article__snippet mdc-typography--body1">
-    <div style="height: {{limit}};" class="faded-overflow">
+    <div style="max-height: {{limit}};" class="faded-overflow">
       {{{description}}}
     </div>
   </div>
