--- a/sites/configurations/goodmoves/templates/pages/home.hbs
+++ b/sites/configurations/goodmoves/templates/pages/home.hbs
@@ -145,18 +145,18 @@
             {{/each ~}}
             {{/compare}}
             <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4-desktop mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-4-phone shortlist-jobs last-card">
-              <div class="mdc-card align-centre">
+              <div class="mdc-card align-centre mdc-typography--body1">
                 <a href="/search">Find more jobs for your shortlist</a>
               </div>
             </div>
             {{else}}
             <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12-desktop mdc-layout-grid__cell--span-8-tablet mdc-layout-grid__cell--span-4-phone">
               {{#compare @root.data.supplimentaryResponses.shortlist_vacancies_closed.hits.total ">" 0}}
-              <p class="h-padding">
+              <p class="mdc-typography--body1 h-padding v-margin-none">
                 There are currently no open jobs in your shortlist. <a href="/shortlist">See closed jobs</a>.
               </p>
               {{else}}
-              <p class="h-padding">
+              <p class="mdc-typography--body1 h-padding v-margin-none">
                 There are currently no jobs in your shortlist, if you shortlist a job it will appear here for easy reference.
               </p>
               {{/compare}}
@@ -204,7 +204,7 @@
           </div>
           {{/each ~}}
           <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4-desktop mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-4-phone latest-jobs last-card">
-            <div class="mdc-card align-centre">
+            <div class="mdc-card align-centre mdc-typography--body1">
               {{#ifAll @root.data.auth @root.data.searches.items.[0].[0] ~}}
               <a href="/search?sort=newest">All latest jobs</a>
               {{else}}
@@ -245,7 +245,7 @@
           </div>
           {{/each ~}}
           <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4-desktop mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-4-phone top-jobs last-card">
-            <div class="mdc-card align-centre">
+            <div class="mdc-card align-centre mdc-typography--body1">
               <a href="/search">Find more jobs</a>
             </div>
           </div>
