--- a/sites/configurations/goodmoves/layouts/default.hbs
+++ b/sites/configurations/goodmoves/layouts/default.hbs
@@ -175,7 +175,7 @@ if(location.host.indexOf('.local') > -1){
               {{#if @root.data.auth ~}}
               <div class="mdc-menu-anchor">
                 <button class="mdc-button" data-menu-target="#user-menu">
-                  {{#if data.auth.photoURL ~}}
+                  {{#if @root.data.auth.photoURL ~}}
                   <img src="{{data.auth.photoURL}}" class="far fa-fw user-avatar" />
                   {{else}}
                   <span class="far fa-fw fa-user-circle"></span>
