--- a/sites/configurations/goodmoves/partials/vacancy-search-form.hbs
+++ b/sites/configurations/goodmoves/partials/vacancy-search-form.hbs
@@ -99,9 +99,9 @@
       </h3>
       <div id="{{instance_id}}-salary-collapse"{{#unless (getProperty @root.request.params.query "salary_min")}}{{#unless (getProperty @root.request.params.query "salary_max")}} style="display: none;"{{/unless}}{{/unless}}>
         <div class="h-padding">
-          <div class="mdc-text-field mdc-text-field--box mdc-text-field--with-leading-icon" data-mdc-auto-init="MDCTextField">
+          <div class="mdc-text-field mdc-text-field--box mdc-text-field--with-leading-icon" data-mdc-auto-init="MDCTextField" novalidate>
             <span class="far fa-arrow-alt-from-left mdc-text-field__icon" tabindex="-1"></span>
-            <input type="number" id="{{instance_id}}-salary_min" min="0" max="1000000" name="salary_min" class="mdc-text-field__input mdc-text-field--fullwidth" value="{{@root.request.params.query.salary_min}}" data-lpignore="true">
+            <input type="number" id="{{instance_id}}-salary_min" min="0" max="1000000" name="salary_min" class="mdc-text-field__input mdc-text-field--fullwidth" value="{{@root.request.params.query.salary_min}}" data-lpignore="true" novalidate>
             <label class="mdc-floating-label" for="{{instance_id}}-salary_min">
               Minimum salary
             </label>
@@ -110,9 +110,9 @@
         </div>
 
         <div class="h-padding">
-          <div class="mdc-text-field mdc-text-field--box mdc-text-field--with-leading-icon" data-mdc-auto-init="MDCTextField">
+          <div class="mdc-text-field mdc-text-field--box mdc-text-field--with-leading-icon" data-mdc-auto-init="MDCTextField" novalidate>
             <span class="far fa-arrow-alt-to-right mdc-text-field__icon" tabindex="-1"></span>
-            <input type="number" id="{{instance_id}}-salary_max" min="0" max="1000000" name="salary_max" class="mdc-text-field__input mdc-text-field--fullwidth" value="{{@root.request.params.query.salary_max}}" data-lpignore="true">
+            <input type="number" id="{{instance_id}}-salary_max" min="0" max="1000000" name="salary_max" class="mdc-text-field__input mdc-text-field--fullwidth" value="{{@root.request.params.query.salary_max}}" data-lpignore="true" novalidate>
             <label class="mdc-floating-label" for="{{instance_id}}-salary_max">
               Maximum salary
             </label>
