--- a/sites/configurations/goodmoves/templates/vacancies/vacancy-foot.hbs
+++ b/sites/configurations/goodmoves/templates/vacancies/vacancy-foot.hbs
@@ -1,5 +1,20 @@
 <script src="https://cdn.jsdelivr.net/simplemde/latest/simplemde.min.js"></script>
 <script type="text/javascript">
+if (window.location.hash) {
+  var hash = window.location.hash.replace('#', '');
+  var tab = $('[aria-controls="' + hash + '"]');
+  if (tab.length > 0) {
+    tab.addClass('mdc-tab--active');
+    var panel = $('#' + tab.attr('aria-controls')).addClass('panel--active');
+    var activeTab = tab.siblings('.mdc-tab--active');
+    if (activeTab[0]) {
+      var activePanel = $('#' + activeTab.attr('aria-controls'));
+      activeTab.removeClass('mdc-tab--active');
+      activePanel.removeClass('panel--active');
+    }
+  }
+}
+
 var tabs = new mdc.tabs.MDCTabBar(document.querySelector("#vacancy-tab-bar"));
 var panels = document.querySelector(".panels");
 tabs.preventDefaultOnClick = true;
